--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -1,20 +1,22 @@
 {
   "dependencies": {
-    "coc-actions": ">=1.3.1",
+    "coc-actions": ">=1.4.0",
+    "coc-clangd": ">=0.3.1",
     "coc-css": ">=1.2.2",
     "coc-dictionary": ">=1.2.2",
     "coc-emmet": ">=1.1.4",
     "coc-eslint": ">=1.2.6",
     "coc-highlight": ">=1.2.5",
-    "coc-html": ">=1.2.3",
+    "coc-html": ">=1.2.4",
     "coc-json": ">=1.2.5",
-    "coc-prettier": ">=1.1.11",
+    "coc-prettier": ">=1.1.12",
     "coc-python": ">=1.2.9",
-    "coc-snippets": ">=2.1.22",
+    "coc-smartf": ">=1.1.10",
+    "coc-snippets": ">=2.1.23",
     "coc-stylelint": ">=1.1.0",
     "coc-syntax": ">=1.2.4",
     "coc-tslint-plugin": ">=1.1.1",
-    "coc-tsserver": ">=1.4.11",
+    "coc-tsserver": ">=1.4.12",
     "coc-ultisnips": ">=1.2.3",
     "jest-snippets": "https://github.com/andys8/vscode-jest-snippets"
   }
