--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -25,22 +25,7 @@
     ],
     "python.formatting.blackPath": "~/.local/bin/black",
     "prettier.printWidth": 60,
-    "smartf.timeout": 3000,
-    
+    "smartf.timeout": 2000,
     "clangd.path": "/usr/local/opt/llvm/bin/clangd",
-    "clangd.enabled": false,
-    "languageserver": {
-        "ccls": {
-            "command": "ccls",
-            "filetypes": ["c", "cpp", "objc", "objcpp"],
-            "rootPatterns": [".ccls", ".ccls-root", "compile_commands.json", ".vim/", ".git/", ".hg/"],
-            "initializationOptions": {
-                "cache": {
-                    "directory": "/tmp/ccls"
-                },
-                "clang": {
-                    "resourceDir": "/Library/Developer/CommandLineTools/usr/lib/clang/11.0.0"}
-            }
-        }
-    }
+    "clangd.enabled": true
 }
