--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -1,23 +1,24 @@
 {
   "dependencies": {
-    "coc-actions": ">=1.4.0",
-    "coc-clangd": ">=0.4.3",
-    "coc-css": ">=1.2.2",
+    "coc-actions": ">=1.4.1",
+    "coc-clangd": ">=0.4.14",
+    "coc-css": ">=1.2.5",
     "coc-dictionary": ">=1.2.2",
-    "coc-emmet": ">=1.1.4",
-    "coc-eslint": ">=1.2.6",
-    "coc-highlight": ">=1.2.5",
+    "coc-emmet": ">=1.1.6",
+    "coc-eslint": ">=1.3.0",
+    "coc-highlight": ">=1.2.6",
     "coc-html": ">=1.2.4",
     "coc-json": ">=1.2.6",
-    "coc-prettier": ">=1.1.12",
+    "coc-prettier": ">=1.1.17",
     "coc-python": ">=1.2.12",
     "coc-smartf": ">=1.1.10",
-    "coc-snippets": ">=2.1.26",
+    "coc-snippets": ">=2.2.0",
     "coc-stylelint": ">=1.1.0",
     "coc-syntax": ">=1.2.4",
     "coc-tslint-plugin": ">=1.1.1",
-    "coc-tsserver": ">=1.5.1",
+    "coc-tsserver": ">=1.5.6",
     "coc-ultisnips": ">=1.2.3",
+    "coc-vimtex": ">=1.0.4",
     "jest-snippets": "https://github.com/andys8/vscode-jest-snippets"
   }
 }
