--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -1,23 +1,16 @@
 {
   "dependencies": {
-    "coc-actions": ">=1.4.2",
-    "coc-clangd": ">=0.4.14",
-    "coc-css": ">=1.2.5",
-    "coc-dictionary": ">=1.2.2",
-    "coc-emmet": ">=1.1.6",
+    "coc-actions": ">=1.5.0",
+    "coc-css": ">=1.2.6",
     "coc-eslint": ">=1.3.2",
-    "coc-highlight": ">=1.2.6",
-    "coc-html": ">=1.2.4",
+    "coc-highlight": ">=1.2.7",
+    "coc-html": ">=1.3.2",
     "coc-json": ">=1.3.2",
-    "coc-prettier": ">=1.1.17",
-    "coc-python": ">=1.2.12",
-    "coc-smartf": ">=1.1.10",
-    "coc-snippets": ">=2.2.1",
-    "coc-stylelint": ">=1.2.0",
-    "coc-syntax": ">=1.2.4",
-    "coc-tslint-plugin": ">=1.1.1",
-    "coc-tsserver": ">=1.5.8",
-    "coc-vimtex": ">=1.0.4",
-    "jest-snippets": "https://github.com/andys8/vscode-jest-snippets"
+    "coc-prettier": ">=1.1.20",
+    "coc-pyright": ">=1.1.98",
+    "coc-smartf": ">=1.1.11",
+    "coc-snippets": ">=2.3.1",
+    "coc-spell-checker": ">=1.2.0",
+    "coc-tsserver": ">=1.6.6"
   }
 }
